# CamConnection

./: .env.example  .gitignore  README.md  api_realtime.py  api_realtime2.py  conectioncam.py  constants.py  ler_placa.py  main_video.py  pyproject.toml  read_plate.py  setup.cfg  utils.py
CAMIP/: conection_camip.py
constants/: paths.py  urls.py
video/: add_missing_data.py  visualize.py
