[project]
name = "camconnection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "filterpy>=1.4.5",
    "flask>=3.0.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "ultralytics>=8.3.36",
]
